benefits/static/css/styles.css
/* ... */
.form-container .form-group:not(:first-child) {
  padding-top: var(--form-input-gap);
}

.form-container .form-control-label {
  font-size: var(--bs-body-font-size);
  font-weight: var(--medium-font-weight);
  letter-spacing: var(--body-letter-spacing);
  padding-bottom: 12px;
}

.form-container .form-control {
  border-width: 2px;
  border-radius: 3px;
  border-color: var(--primary-color);
  color: var(--text-primary-color);
  font-size: var(--font-size-24px);
  padding: 0.625rem 0.75rem;
  /* Input height should be 60px */
}

.form-text {
  font-size: var(--font-size-14px);
}

/* Forms: Radio Buttons */

:root {
  --radio-button-size: 24px;
  --radio-input-color: var(--standout-color);
  --radio-input-gap: 40px;
}

@media (min-width: 992px) {
  :root {
    --radio-input-gap: 15px;
  }
}

.radio-label {
  cursor: pointer;
}

.radio-input-group {
  gap: var(--radio-input-gap);
}

.radio-input-group:not(:first-child) {
  padding-top: 24px;
}

.radio-input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: var(--radio-button-size);
  height: var(--radio-button-size);
  border: 2px solid var(--radio-input-color);
  margin: 3px 0;
}

.radio-input:checked {
  background-color: var(--radio-input-color);
  box-shadow: inset 0 0 0 2px var(--bs-white);
}

/* Media List */

:root {
  --media-item-icon-size: 64px;
  --media-item-gap: 24px;
  --media-item-icon-margin: 24px;
  --media-title-margin-top: 24px;
}

@media (min-width: 992px) {
  :root {
    --media-item-icon-size: 90px;
    --media-item-gap: 62px;
    --media-item-icon-margin: 32px;
    --media-title-margin-top: 64px;
  }
}

h1 + .media-list, /* A .media-list immediately following the h1: Enrollment Success, but not Eligibility Start */
.media-body--details p:not(:first-of-type) {
  /* All the p within .media-body--details, except for the first p - Any media item with more than one p */
  padding-top: 24px;
}

.media-title {
  margin-top: var(--media-title-margin-top);
  margin-bottom: 24px;
}

.media-list {
  gap: var(--media-item-gap);
  margin-bottom: 64px;
}

.media-list .media .media-line .icon {
  width: var(--media-item-icon-size);
  height: var(--media-item-icon-size);
  margin-right: var(--media-item-icon-margin);
}

.media-list .media .media-body--details,
.media-list .media .media-body--items li:first-child {
  padding-top: 5px;
}

.media-list .media .media-body--items li {
  list-style-type: disc;
}

/* Enrollment Success */
/* Custom in-line log out button for Enrollment Success, in paragraph */

:root {
  --logout-paragraph-margin-left: calc(
    var(--media-item-icon-margin) + var(--media-item-icon-size)
  );
}

@media (min-width: 992px) {
  :root {
    --logout-paragraph-margin-left: 0;
  }
}

.enrollment-success #login {
  padding: 0 0.5rem 0.3rem 0.6rem;
  display: inline-block;
  margin: 0;
  width: inherit;
  border-radius: 0;
}

.enrollment-success #login .fallback-text {
  padding-top: 14px;
  margin: 8px auto 0 auto;
  display: block;
  width: 7rem;
}

.enrollment-success .logout-paragraph {
  margin-left: var(--logout-paragraph-margin-left);
}

/* Agency Index */
/* This page has a full-width and full-height background image, creating the need to re-set the Footer margin top to 0 */

:root {
  --agency-index-main-height: 100vh;
  --agency-index-background: url("/static/img/benefits-bg-mobile.jpg") no-repeat
    var(--primary-color);
  --agency-index-box-background: var(--bs-white);
  --agency-index-box-border: 12px solid var(--primary-color);
  --agency-index-text-color: var(--text-primary-color);
}

@media (min-width: 992px) {
  :root {
    --agency-index-main-height: calc(
      100vh - 130px
    ); /* 130px = Header Height (80px) + (Footer Link (50px) */
    --agency-index-background: url("/static/img/benefits-bg-desktop.jpg")
      no-repeat;
    --agency-index-box-background: transparent;
    --agency-index-box-border: none;
    --agency-index-text-color: var(--bs-white);
  }
}

.agency-index main#main-content {
  min-height: var(--agency-index-main-height);
  background: var(--agency-index-background);
  background-size: cover;
}

.agency-index main#main-content .container .row:first-child {
  min-height: var(--agency-index-main-height);
}

.agency-index .box {
  background: var(--agency-index-box-background);
  border-top: var(--agency-index-box-border);
  color: var(--agency-index-text-color);
  margin-bottom: 32px;
}

.agency-index .box .btn.btn-lg.btn-primary {
  width: 250px; /* Button is 250 x 72 */
  display: block;
  margin: 0 auto; /* Center the button */
  padding: 19px 0; /* Button is 250 x 72 */
}

.agency-index footer {
  margin-top: 0;
}

